# pqc-scanner

./: .gitignore  .release-please-manifest.json  .trufflehog.yml  AUTO_REMEDIATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_NOTES.md  Makefile  README.md  REMEDIATION_PLAN_SUMMARY.md  SECURITY.md  action.yml  build.rs  oscal-assessment-results.json  package.json  release-please-config.json  rust_wasm_app.d.ts  sc13-compliance-report.json  trivy.yaml
.claude-flow/metrics/: performance.json  task-metrics.json
.github/: CODEOWNERS  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: cargo-audit.yml  ci.yml  codeql.yml  dependency-review.yml  docker-publish.yml  npm-publish.yml  release-please.yml  release.yml  sbom.yml  scorecard.yml  trivy-scan.yml  trufflehog-scan.yml
.gitlab/: .gitlab-ci.yml  README.md
.swarm/: memory.db
argocd/: README.md  application.yaml
argocd/manifests/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
benches/: benchmarks.rs
docs/: ASCII_LOGO.txt  CLEANUP_PLAN.md  DEPENDENCY_UPDATES_INDEX.md  DEPENDENCY_UPDATE_COMMANDS.md  DEPENDENCY_UPDATE_PLAN.md  DEPENDENCY_UPDATE_SUMMARY.md  DEPENDENCY_UPDATE_VISUAL.md  DOCKER_WEB_DASHBOARD_PLAN.md  P1943_IMPLEMENTATION_PLAN.md  PHASE2_BUILD_REPORT.md  PHASE_2_SUMMARY.md  PHASE_3_DEPLOYMENT.md  QFA_PRD.md  RELEASE_CHECKLIST.md  REVIEW_GUIDE.md  SAMPLES.md  SAMPLES_MIGRATION_CHECKLIST.md  SAMPLES_MIGRATION_PLAN.md  SAMPLE_REPOSITORIES.md  VISION_2045.md  openssf-research-findings.md
docs/baseline/: BASELINE_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3-5_SUMMARY.md  binary-sizes.txt  mcp-tests.txt  security-audit-rust.txt
docs/implementation/: CREATE_PROJECT_BOARD.md  GITHUB_ISSUES_SUMMARY.md  IMPLEMENTATION_PLAN.md  ORGANIZE_PROJECT_BOARD.md  PROJECT_BOARD_STATUS.md  QUICK_SETUP_NEXT_STEPS.md  README.md  SETUP_CHECKLIST.md  SPRINT_PLANNING_Q1.md  SPRINT_PLANNING_Q2.md  project-board-fields.csv
docs/marketing/: EXECUTIVE_SUMMARY.md  README.md  SOCIAL_MEDIA_KIT.md
docs/photoniq/: BENCHMARK_GUIDE.md  PERFORMANCE_REPORT.md  README-OLLAMA-WSL.md  SETUP-COMPLETE.md  audit-report-template.md  nist-pqc-quick-reference.md  nist-quantum-safe-audit-guide.md  ollama-integration-guide.md  ollama-quickref.md  (+6 more)
examples/: canadian_compliance_example.rs  generate_compliance_report.rs  remediation_example.rs  scan_directory.rs
jenkins/: Jenkinsfile  README.md
mcp/: package.json
samples/: .samples-summary.txt  GETTING_STARTED.md  README.md
scripts/: create-github-issues.sh  create-project-board.sh  organize-project-board.sh  populate-project-board.sh  scan-all-samples.sh  test.sh
src/: algorithm_database.rs  audit.rs  canadian_compliance.rs  compliance.rs  detector.rs  lib.rs  parser.rs  remediation.rs  types.rs
tests/: error_handling_tests.rs  integration_tests.rs  remediation_test.rs
travis/: .travis.yml  README.md
(+36 files in other folders)
