[package]
name = "rust-wasm-app"
version = "0.1.0"
edition = "2021"
authors = ["PhotonIQ Team"]
description = "Quantum-safe cryptography auditor for detecting vulnerable algorithms"
license = "MIT"
repository = "https://github.com/photoniq/quantum-audit"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
regex = "1.10"
lazy_static = "1.4"
thiserror = "1.0"
once_cell = "1.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
